syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy";
option java_outer_classname = "ChavePixGrpc";

package br.com.zupacademy;

// CADASTRA
service CadastraChavePixService {

    rpc Registra(CadastraChavePixRequest) returns (ChavePixCadastradaResponse) {}
}

enum TipoChaveRequest {
    TIPO_CHAVE_UNSPECIFIED = 0;
    TIPO_CHAVE_CPF = 1;
    TIPO_CHAVE_TELEFONE = 2;
    TIPO_CHAVE_EMAIL = 3;
    TIPO_CHAVE_ALEATORIA = 4;
}

enum TipoContaRequest {
    TIPO_CONTA_UNSPECIFIED = 0;
    TIPO_CONTA_POUPANCA = 1;
    TIPO_CONTA_CORRENTE = 2;
}

message CadastraChavePixRequest {
    string cliente_id = 1;
    TipoChaveRequest tipo_chave = 2;
    string valor_chave = 3;
    TipoContaRequest tipo_conta = 4;
}

message ChavePixCadastradaResponse {
    string chave_pix_id = 1;
}

// DELETA
service DeletaChavePixService {

    //    rpc Deleta(DeletaChavePixRequest) returns (google.protobuf.Empty) {}
    rpc Deleta(DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

message DeletaChavePixRequest {
    string cliente_id = 1;
    string chave_pix_id = 2;
}

message DeletaChavePixResponse {
}

// ERROR MESSAGE
message FieldErrorDetails {
    string field = 1;
    string message = 2;
}

message FieldErrorDetailsList {
    repeated FieldErrorDetails field_errors = 1;
}